test/types/enum/enumOrder3.good
red
1
2
3
red
green
blue
enumOrder3.chpl:12: error: halt reached - enumerated type out of bounds in chpl__orderToEnum()
